# object_oriented_programming_task_v2

./: CMakeLists.txt  Doxyfile  FileGenerator.cpp  FileGenerator.h  Person.cpp  Person.h  README.md  Student.cpp  Student.h  TextReader.cpp  TextReader.h  UserInterface.cpp  UserInterface.h  installer.sh  libraries.h  main.cpp  tests.cpp  tests.h
html/: _file_generator_8h_source.html  _person_8h_source.html  _student_8h_source.html  _text_reader_8h_source.html  _user_interface_8h_source.html  annotated.html  class_file_generator-members.html  class_file_generator.html  class_person-members.html  class_person.html  class_student-members.html  class_student.html  class_text_reader-members.html  class_text_reader.html  class_user_interface-members.html  class_user_interface.html  classes.html  doxygen_crawl.html  files.html  hierarchy.html  index.html  libraries_8h_source.html  md__r_e_a_d_m_e.html  pages.html  struct_person_comp-members.html  struct_person_comp.html  structstudent_comp-members.html  structstudent_comp.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  (+10 more)
latex/: _file_generator_8h_source.tex  _person_8h_source.tex  _student_8h_source.tex  _text_reader_8h_source.tex  _user_interface_8h_source.tex  annotated.tex  class_file_generator.tex  class_person.eps  class_person.tex  class_student.eps  class_student.tex  class_text_reader.tex  class_user_interface.tex  files.tex  hierarchy.tex  libraries_8h_source.tex  md__r_e_a_d_m_e.tex  refman.tex  struct_person_comp.tex  structstudent_comp.tex
